--- a/Course manual/Modulebeschrijving.tex
+++ b/Course manual/Modulebeschrijving.tex
@@ -20,9 +20,8 @@
 	\hline
 	\textbf{Learning materials:}  &
 		\begin{itemize}
-			\item Book: Giuseppe Maggiore and Giulia Costantini - Friendly F\#
+			\item Book: Remo H. Jansen - Learning TypeScript 2.x - Second Edition
 			\item Book: Benjamin Pierce - Types and Programming Languages
-			\item Book: Don Syme - Expert F\#
 			\item exercises and assignments, to be done at home and during the practical part of the lectures (pdf): found on N@tschool
 		\end{itemize} \\
 	\hline
