--- a/Course manual/Programma.tex
+++ b/Course manual/Programma.tex
@@ -53,7 +53,7 @@ The eight lectures take place during the eight weeks of the course, but are not 
   \item String of a tree on console recursive.
   \item Compare two trees.
   \item Graph, DFS, BFS.
-  \item Type Classes with function records (\texttt{Num<a>}, \texttt{Show}, \texttt{IComparable<a>} as a record of functions). 
+  \item Type Classes with function records. 
 \end{itemize}
 
 \subsection*{Unit 6}
