Fixed assignments. Added unit 3 exercises.

--- a/Exercises/Lesson 1/unit1 - exercises.tex
+++ b/Exercises/Lesson 1/unit1 - exercises.tex
@@ -35,14 +35,14 @@
 }\\
 
 \exercise{
-  \functionEx{allNumberRev}{(lower: number) => (upper: number): string}{
+  \functionEx{allNumberRange}{(lower: number) => (upper: number): string}{
       that returns a string containing all numbers between \texttt{lower} and \texttt{upper}. Separate the numbers with a white space.
     }
 }\\
 
 \exercise{
-  \functionEx{allNumberRev}{(lower: number) => (upper: number): string}{
-      that returns a string containing all numbers between \texttt{lower} and \texttt{upper}. Separate the numbers with a white space.
+  \functionEx{allNumberRangeRev}{(lower: number) => (upper: number): string}{
+      that returns a string containing all numbers between \texttt{lower} and \texttt{upper} in reverse order. Separate the numbers with a white space.
     }
 }\\
 
@@ -76,7 +76,7 @@
 }
 
 \exercise{
-  \functionEx{toBinary}{(n: number) => (base: number): string}{
+  \functionEx{toBase}{(n: number) => (base: number): string}{
       that returns a string containing the representation of the input number in an arbitrary base (the number must be positive). The algorithm is the same as above except you must take the remainder of \texttt{n} divided by \texttt{base}.
     }
 }
