Updated draft of the course description

--- a/Course manual/AlgemeneOmschrijving.tex
+++ b/Course manual/AlgemeneOmschrijving.tex
@@ -12,5 +12,12 @@ Functional programming and functional programming languages are increasing in po
 
 The reason for this growth is to be found in the safe and deep expressive power of functional languages, which are capable of recombining simpler elements into powerful, complex other elements with less space for mistakes and more control in the hands of the programmer. This comes at a fundamental cost: functional languages are structurally different from imperative and object oriented languages, and thus a new mindset is required of the programmer that wishes to enter this new world. Moreover, functional languages often require more thought and planning, and are thus experienced, especially by beginners, as somewhat less flexible and supporting of experimentation.
 
-\subsection{Relationship with other didactic units}
-This module completes and perfects the understanding and knowledge of programming that was set up in the preceding INFDEV courses.
+\subsection{Relationship with other didactic units and required knowledge}
+This module completes and perfects the understanding and knowledge of programming that was set up in the Development courses of the first year. The preliminary knowledge necessary to fully understand this course covers the following topics:
+
+\begin{itemize}[noitemsep]
+\item Semantics of programming languages and its evaluation.
+\item The memory model of \textit{Stack} and \textit{Heap}.
+\item \textit{Type systems} and type checking.
+\item Dynamic vs Static typing.
+\end{itemize}
