--- a/Course manual/Course manual Development 8.tex
+++ b/Course manual/Course manual Development 8.tex
@@ -68,9 +68,9 @@ breaklines=true}
 \newcommand{\organisatie}{\uppercase{Hogeschool Rotterdam / CMI}}
 \newcommand{\modulenaam}{Functional programming fundamentals}
 \newcommand{\modulecode}{\uppercase{INFSEN02-8/INFSEN23-8}}
-\newcommand{\studiejaar}{\uppercase{2017-2018}}
+\newcommand{\studiejaar}{\uppercase{2018-2019}}
 \newcommand{\stdPunten}{4}
-\renewcommand{\author}{Francesco Di Giacomo}
+\renewcommand{\author}{Francesco Di Giacomo, Giulia Costantini, Mohamed Abbadi}
 
 \definecolor{lichtGrijs}{RGB}{169,169,169}
 
