--- a/Course manual/Programma.tex
+++ b/Course manual/Programma.tex
@@ -12,8 +12,8 @@ The eight lectures take place during the eight weeks of the course, but are not 
       \item Lambda-abstractions/functions
       \item Function application
     \end{itemize}	
-  \item Introduction to Typescript
-  \item example of lambda calculus in Typescript
+  \item Introduction to \textcolor{red}{Typescript}
+  \item example of lambda calculus in \textcolor{red}{Typescript}
   \item Bindings and their semantics in lambda-calculus.
   \item Functional \texttt{if-then-else} and differences with its imperative counterpart.
 \end{itemize}
@@ -22,15 +22,17 @@ The eight lectures take place during the eight weeks of the course, but are not 
 \paragraph*{Topics}			
 \begin{itemize}[noitemsep]
 	\item Typed lambda calculus. Typing variables, lambda abstractions, function applications.
-  \item Lists and recursion.
-  \item Examples on lists.
+  \item Discriminate unions and records in Typescript.
+  \item Pattern matching
+  \item Lists with \texttt{Cons} and \texttt{Empty}
+  \item Recursive functions on lists in \textcolor{red}{Typescript}
 \end{itemize}
 
 \subsection*{Unit 3}
 \paragraph*{Topics}			
 \begin{itemize}[noitemsep]
+  \item Higher-order functions.
 	\item Pipe operator, function composition, map, fold, map2, fold2.
-  \item Tuples in lambda calculus and Typescript
   \item Curry and Uncurry
   \item Case Study: SQL
 \end{itemize}
@@ -38,20 +40,15 @@ The eight lectures take place during the eight weeks of the course, but are not 
 \subsection*{Unit 4}
 \paragraph*{Topics}			
 \begin{itemize}[noitemsep]
-	\item Discriminated unions in lambda calculus.
-  \item Discriminate unions and records in Typescript.
-  \item Pattern matching
-  \item Recursive data structures (Trees, Lists with Cons and Empty, …)
+  \item Immutable trees.
+  \item Immutable Binary Search Tree. Find, Add, Remove.
   \item Case Study: Expression evaluation  
 \end{itemize}
 
 \subsection*{Unit 5}
 \paragraph*{Topics}
 \begin{itemize}[noitemsep]
-  \item List with Cons, Empty. Map and fold with this definition.
-  \item Immutable Binary Search Tree. Find, Add, Remove.
-  \item String of a tree on console recursive.
-  \item Compare two trees.
-  \item Graph, DFS, BFS.
-  \item Type Classes with function records. 
+  \item \texttt{map} and \texttt{fold} on Binary Search Trees.
+  \item \texttt{map} and \texttt{fold} on \texttt{Option}.  
+  \item Functors with records of functions.
 \end{itemize}
