Added compilation function accepting C# data structures

--- a/Course manual/Programma.tex
+++ b/Course manual/Programma.tex
@@ -22,10 +22,11 @@ The eight lectures take place during the eight weeks of the course, but are not 
 \paragraph*{Topics}			
 \begin{itemize}[noitemsep]
 	\item Typed lambda calculus. Typing variables, lambda abstractions, function applications.
-  \item Discriminate unions and records in Typescript.
+  \item Recursive functions.
+  \item Discriminate unions and records in \textcolor{red}{Typescript}.
   \item Pattern matching
   \item Lists with \texttt{Cons} and \texttt{Empty}
-  \item Recursive functions on lists in \textcolor{red}{Typescript}
+  \item Recursive functions on lists in \textcolor{red}{Typescript}.
 \end{itemize}
 
 \subsection*{Unit 3}
