Update course description

--- a/Course manual/Programma.tex
+++ b/Course manual/Programma.tex
@@ -12,43 +12,37 @@ The eight lectures take place during the eight weeks of the course, but are not 
       \item Lambda-abstractions/functions
       \item Function application
     \end{itemize}	
-  \item Introduction to \textcolor{red}{Typescript}
-  \item example of lambda calculus in \textcolor{red}{Typescript}
-  \item Bindings and their semantics in lambda-calculus.
-  \item Functional \texttt{if-then-else} and differences with its imperative counterpart.
+  \item Introduction to F\#
 \end{itemize}
 
 \subsection*{Unit 2}
 \paragraph*{Topics}			
 \begin{itemize}[noitemsep]
 	\item Typed lambda calculus. Typing variables, lambda abstractions, function applications.
-  \item Discriminate unions and records in Typescript.
-  \item Pattern matching
-  \item Lists with \texttt{Cons} and \texttt{Empty}
-  \item Recursive functions on lists in \textcolor{red}{Typescript}
+  \item Basic data structures in F\#
+  \item Pattern matching.
 \end{itemize}
 
 \subsection*{Unit 3}
 \paragraph*{Topics}			
 \begin{itemize}[noitemsep]
-  \item Higher-order functions.
-	\item Pipe operator, function composition, map, fold, map2, fold2.
-  \item Curry and Uncurry
-  \item Case Study: SQL
+  \item Polymorhpism in functional programming
+	\item Discriminated unions.
 \end{itemize}
 
 \subsection*{Unit 4}
 \paragraph*{Topics}			
 \begin{itemize}[noitemsep]
-  \item Immutable trees.
-  \item Immutable Binary Search Tree. Find, Add, Remove.
-  \item Case Study: Expression evaluation  
+  \item Higher-order functions.
+  \item Function composition.
+  \item HOF design patterns.
 \end{itemize}
 
 \subsection*{Unit 5}
 \paragraph*{Topics}
 \begin{itemize}[noitemsep]
-  \item \texttt{map} and \texttt{fold} on Binary Search Trees.
-  \item \texttt{map} and \texttt{fold} on \texttt{Option}.  
-  \item Functors with records of functions.
+  \item Hierarchical advanced data structures.
+  \item Immutable trees.
+  \item Immutable binary search trees.
+  \item Decision trees.
 \end{itemize}
