--- a/Course manual/Course manual Development 8.tex
+++ b/Course manual/Course manual Development 8.tex
@@ -66,11 +66,11 @@ breaklines=true}
 %Nieuwe commando's
 \newcommand{\HRule}{\rule{\linewidth}{1pt}}
 \newcommand{\organisatie}{\uppercase{Hogeschool Rotterdam / CMI}}
-\newcommand{\modulenaam}{Functional programming fundamentals}
+\newcommand{\modulenaam}{Advanced Programming}
 \newcommand{\modulecode}{\uppercase{INFSEN02-8/INFSEN23-8}}
 \newcommand{\studiejaar}{\uppercase{2018-2019}}
 \newcommand{\stdPunten}{4}
-\renewcommand{\author}{Francesco Di Giacomo, Giulia Costantini, Mohamed Abbadi}
+\renewcommand{\author}{Francesco Di Giacomo, Giuseppe Maggiore, Mohamed Abbadi}
 
 \definecolor{lichtGrijs}{RGB}{169,169,169}
 
