--- a/Course manual/Glossary.tex
+++ b/Course manual/Glossary.tex
@@ -25,6 +25,6 @@
 \newglossaryentry{fpext}{
 	name=fpext
 	, description={The learning objective stating that at the end of this course: the student \textbf{can program} with the common extensions of a functional programming language wrt the basic lambda calculus, such as \texttt{let}, \texttt{if}, \textbf{let-rec}, unions, tuples, records, etc. The language of focus is Typescript.}
-	, first={\textbf{can program} with the typical constructs of a modern functional language. The language of focus is Typescript. \texttt{(FP EXT)}}
+	, first={\textbf{can program} with the typical constructs of a modern functional language. The language of focus is F\#. \texttt{(FP EXT)}}
 , symbol=\textbf{FP EXT}
 }
