--- a/Course manual/Modulebeschrijving.tex
+++ b/Course manual/Modulebeschrijving.tex
@@ -8,7 +8,7 @@
 	\hline
 	\textbf{Study points \newline and hours of effort:} & This module gives \stdPunten{}  ects, in correspondence with \FPeval{\result}{clip(\stdPunten*28)}\result{} hours:
 	\begin{itemize}
-		\item 2 X 8 hours of combined lecture and practical
+		\item 2 X 7 hours of combined lecture and practical
 		\item the rest is self-study
 	\end{itemize} \\
 	\hline
@@ -20,8 +20,7 @@
 	\hline
 	\textbf{Learning materials:}  &
 		\begin{itemize}
-			\item Book: Remo H. Jansen - Learning TypeScript 2.x - Second Edition
-			\item Book: Benjamin Pierce - Types and Programming Languages
+			\item Book: Don Syme - Expert F\#
 			\item exercises and assignments, to be done at home and during the practical part of the lectures (pdf): found on N@tschool
 		\end{itemize} \\
 	\hline
