--- a/Course manual/Course manual Development 8.tex
+++ b/Course manual/Course manual Development 8.tex
@@ -66,11 +66,11 @@ breaklines=true}
 %Nieuwe commando's
 \newcommand{\HRule}{\rule{\linewidth}{1pt}}
 \newcommand{\organisatie}{\uppercase{Hogeschool Rotterdam / CMI}}
-\newcommand{\modulenaam}{Advanced Programming}
-\newcommand{\modulecode}{\uppercase{INFSEN02-8/INFSEN23-8}}
-\newcommand{\studiejaar}{\uppercase{2018-2019}}
+\newcommand{\modulenaam}{Functional Programming}
+\newcommand{\modulecode}{\uppercase{INFFPR01-D/INFFPR21-D}}
+\newcommand{\studiejaar}{\uppercase{2019-2020}}
 \newcommand{\stdPunten}{4}
-\renewcommand{\author}{Francesco Di Giacomo, Giuseppe Maggiore, Mohamed Abbadi}
+\renewcommand{\author}{Francesco Di Giacomo, Mohamed Abbadi}
 
 \definecolor{lichtGrijs}{RGB}{169,169,169}
 
