--- a/Course manual/Programma.tex
+++ b/Course manual/Programma.tex
@@ -1,6 +1,6 @@
 \section{Course program}
 The course is structured into eight lectures.
-The eight lectures take place during the eight weeks of the course, but are not necessarily in a one-to-one correspondance with the course weeks.
+The eight lectures take place during the seven weeks of the course, but are not necessarily in a one-to-one correspondance with the course weeks.
 
 \subsection*{Unit 1}
 \paragraph*{Topics}
@@ -45,4 +45,5 @@ The eight lectures take place during the eight weeks of the course, but are not 
   \item Immutable trees.
   \item Immutable binary search trees.
   \item Decision trees.
+  \item Graphs.
 \end{itemize}
