--- a/Course manual/Toetsing.tex
+++ b/Course manual/Toetsing.tex
@@ -1,10 +1,12 @@
 \section{Assessment}
 The course is tested with two exams: a written exam and a practical exam. Both parts happen exclusively on paper and must be sufficient in order to pass the course.
 
-
 \subsection{Theoretical examination \modulecode}
 The general shape of an exam for \texttt{\modulecode} is made up of a short series of highly structured open questions.
 In each exam the content of the questions will change, but the structure of the questions will remain the same. Questions might include (but not limited to): apply the semantics of lambda calculus on a small function, determine the type of a functional program, determine the result of the execution of a functional program. A sample exam will be provided during the course.
 
 \subsection{Practical examination \modulecode}
 The practical exam requires to implement a series of functions in the language F\# described in the exam text.
+
+\subsection{Corona Epidemic:}
+Given the current situation the exam cannot happen until the school opens again. We explored ways to have an online examination, including GrandeOmega, but with such short notice we cannot have the course in Grande Omega running properly, due to F\# language not being supported at the moment. We do not know again when written exams can be scheduled again. This affects the students of the older Development 8 course as well, which cannot retake the course until we can have exams again within the school building.
