--- a/Course manual/Toetsing.tex
+++ b/Course manual/Toetsing.tex
@@ -9,4 +9,4 @@ In each exam the content of the questions will change, but the structure of the 
 The practical exam requires to implement a series of functions in the language F\# described in the exam text.
 
 \subsection{Corona Epidemic:}
-Given the current situation the exam cannot happen until the school opens again. We explored ways to have an online examination, including GrandeOmega, but with such short notice we cannot have the course in Grande Omega running properly, due to F\# language not being supported at the moment. We do not know again when written exams can be scheduled again. This affects the students of the older Development 8 course as well, which cannot retake the course until we can have exams again within the school building.
+Given the current situation the exam cannot happen until the school opens again. We explored ways to have an online examination, including GrandeOmega, but with such short notice we cannot have the course in Grande Omega running properly, due to F\# language not being supported at the moment. We do not know at the moment when written exams can be scheduled again. This affects the students of the older Development 8 course as well, which cannot retake the course until we can have exams again within the school building.
