Fix course program

--- a/Course manual/Programma.tex
+++ b/Course manual/Programma.tex
@@ -20,7 +20,7 @@ The eight lectures take place during the seven weeks of the course, but are not 
 \begin{itemize}[noitemsep]
 	\item Typed lambda calculus. Typing variables, lambda abstractions, function applications.
   \item Basic data structures in F\#
-  \item Pattern matching.
+  \item Structural equality.
 \end{itemize}
 
 \subsection*{Unit 3}
@@ -28,6 +28,7 @@ The eight lectures take place during the seven weeks of the course, but are not 
 \begin{itemize}[noitemsep]
   \item Polymorhpism in functional programming
 	\item Discriminated unions.
+  \item Pattern matching.
 \end{itemize}
 
 \subsection*{Unit 4}
