--- a/Course manual/Modulebeschrijving.tex
+++ b/Course manual/Modulebeschrijving.tex
@@ -21,7 +21,7 @@
 	\textbf{Learning materials:}  &
 		\begin{itemize}
 			\item Book: Don Syme - Expert F\#
-			\item exercises and assignments, to be done at home and during the practical part of the lectures (pdf): found on N@tschool
+			\item exercises and assignments, to be done at home and during the practical part of the lectures (pdf): found on cumlaude and Classroom (code: \textbf{fexg5l2})
 		\end{itemize} \\
 	\hline
 	\textbf{Connected to competences:} & realiseren en ontwerpen \\
