--- a/Course manual/Programma.tex
+++ b/Course manual/Programma.tex
@@ -1,6 +1,5 @@
 \section{Course program}
-The course is structured into eight lectures.
-The eight lectures take place during the seven weeks of the course, but are not necessarily in a one-to-one correspondance with the course weeks.
+The course topics are divided in 5 conceptual units, not necessarily in a one-to-one correspondance with the course weeks, which are seven.
 
 \subsection*{Unit 1}
 \paragraph*{Topics}
