Update course manual and fix formatting of reader 2.

--- a/Course manual/Course manual advanced programming.tex
+++ b/Course manual/Course manual advanced programming.tex
@@ -67,8 +67,8 @@ breaklines=true}
 \newcommand{\HRule}{\rule{\linewidth}{1pt}}
 \newcommand{\organisatie}{\uppercase{Hogeschool Rotterdam / CMI}}
 \newcommand{\modulenaam}{Functional Programming}
-\newcommand{\modulecode}{\uppercase{INFFPR01-D/INFFPR21-D}}
-\newcommand{\studiejaar}{\uppercase{2019-2020}}
+\newcommand{\modulecode}{\uppercase{INFADP01-D/INFADP21-D}}
+\newcommand{\studiejaar}{\uppercase{2020-2021}}
 \newcommand{\stdPunten}{4}
 \renewcommand{\author}{Francesco Di Giacomo, Mohamed Abbadi}
 
