--- a/Course manual/Modulebeschrijving.tex
+++ b/Course manual/Modulebeschrijving.tex
@@ -8,7 +8,8 @@
 	\hline
 	\textbf{Study points \newline and hours of effort:} & This module gives \stdPunten{}  ects, in correspondence with \FPeval{\result}{clip(\stdPunten*28)}\result{} hours:
 	\begin{itemize}
-		\item 3 X 7 hours of combined lecture and practical
+		\item 2 X 7 hours of theory.
+    \item 2 X 7 hours of practice.
 		\item the rest is self-study
 	\end{itemize} \\
 	\hline
@@ -21,7 +22,7 @@
 	\textbf{Learning materials:}  &
 		\begin{itemize}
 			\item Book: Don Syme - Expert F\#
-			\item exercises and assignments, to be done at home and during the practical part of the lectures (pdf): found on cumlaude and Classroom (code: \textbf{fexg5l2})
+			\item exercises and assignments, to be done at home and during the practical part of the lectures (pdf): \textbf{\underline{uploaded to microsoft teams}}.
 		\end{itemize} \\
 	\hline
 	\textbf{Connected to competences:} & realiseren en ontwerpen \\
