--- a/Course manual/Toetsing.tex
+++ b/Course manual/Toetsing.tex
@@ -1,12 +1,12 @@
 \section{Assessment}
-The course is tested with two exams: a written exam and a practical exam. Both parts happen exclusively on paper and both must be sufficient in order to pass the course.
+The course is tested with two exams: a written exam and a practical exam. The theory part happens on paper while you can use your laptop in the practical one. Both parts result in a single grade. This means that partial grades on each part are not kept.
 
 \subsection{Theoretical examination \modulecode}
 The general shape of an exam for \texttt{\modulecode} is made up of a short series of highly structured open questions.
 In each exam the content of the questions will change, but the structure of the questions will remain the same. Questions might include (but not limited to): apply the semantics of lambda calculus on a small function, determine the type of a functional program, determine the result of the execution of a functional program. A sample exam will be provided during the course. The theoretical examination mainly covers the lambda calculus topics from unit 1 and 2.
 
 \subsection{Practical examination \modulecode}
-The practical exam requires to implement on paper a series of functions (described in the exam text) in the language F\#. The practical examination contains a question on each learning unit (simple recursion, recursion with basic data structures, polymorphism, higher-order design patterns, and advanced data structures).
+The practical exam requires to implement on paper a series of functions (described in the exam text) in the language F\#. The practical examination contains a question on each learning unit (simple recursion, recursion with basic data structures, polymorphism, higher-order design patterns, and advanced data structures). During the practical examination you are allowed to use your laptop but it is required that you copy the answers on paper. For further information please read the instruction in the exam itself.
 
-\subsection{Corona Epidemic:}
-Given the current situation the exam cannot happen until the school opens again. We do not know at the moment when written exams can be scheduled again. Moreover, it is not clear if it is possible to have online alternatives with proper surveillance. This affects the students of the older Development 8 course as well, which cannot retake the course until we can have exams again within the school building. Further information will be sent to students as soon as we receive clear indication on how to organize exams.
+\subsection{Note for retakers}
+The retakers of the old INFDEV02-8 (Development 8) and functional programming (INFADP01-D) must repeat the whole exam because now the system records just a single grade. This means that if you passed partially the theory or practice of either Development 8 or INFADP01-D you need to repeat the whole exam.
