Adjust examination section.

--- a/Course manual/Toetsing.tex
+++ b/Course manual/Toetsing.tex
@@ -1,12 +1,15 @@
 \section{Assessment}
-The course is tested with two exams: a written exam and a practical exam. The theory part happens on paper while you can use your laptop in the practical one. Both parts result in a single grade. This means that partial grades on each part are not kept.
+The course is tested with two exams: a written exam and a practical exam. The theory part happens on paper while you can use your laptop in the practical one. Both parts result in a single grade. This means that partial grades on each part are not kept. 
 
 \subsection{Theoretical examination \modulecode}
 The general shape of an exam for \texttt{\modulecode} is made up of a short series of highly structured open questions.
 In each exam the content of the questions will change, but the structure of the questions will remain the same. Questions might include (but not limited to): apply the semantics of lambda calculus on a small function, determine the type of a functional program, determine the result of the execution of a functional program. A sample exam will be provided during the course. The theoretical examination mainly covers the lambda calculus topics from unit 1 and 2.
 
 \subsection{Practical examination \modulecode}
-The practical exam requires to implement on paper a series of functions (described in the exam text) in the language F\#. The practical examination contains a question on each learning unit (simple recursion, recursion with basic data structures, polymorphism, higher-order design patterns, and advanced data structures). During the practical examination you are allowed to use your laptop but it is required that you copy the answers on paper. For further information please read the instruction in the exam itself.
+The practical exam requires to implement a series of functions (described in the exam text) in the language F\#. The practical examination contains a question on each learning unit (simple recursion, recursion with basic data structures, polymorphism, higher-order design patterns, and advanced data structures). During the practical examination you are allowed to use your laptop.
+
+\subsubsection{Important}
+For the practical part, you will be provided with a solution template that contains an automatic checker as a pre-compiled library. This checker will tell you in any moment which exercises are correct and your score. In order to compile and run this template, you need .NET core 3.1, so be sure that everything is set up correctly on your machine before the exam. You can test if everything works in advance by compiling and running one of the sample exams.
 
 \subsection{Note for retakers}
 The retakers of the old INFDEV02-8 (Development 8) and functional programming (INFADP01-D) must repeat the whole exam because now the system records just a single grade. This means that if you passed partially the theory or practice of either Development 8 or INFADP01-D you need to repeat the whole exam.
