Fix old course code.

--- a/Course manual/Toetsing.tex
+++ b/Course manual/Toetsing.tex
@@ -12,4 +12,4 @@ The practical exam requires to implement a series of functions (described in the
 For the practical part, you will be provided with a solution template that contains an automatic checker as a pre-compiled library. This checker will tell you in any moment which exercises are correct and your score. In order to compile and run this template, you need .NET core 3.1, so be sure that everything is set up correctly on your machine before the exam. You can test if everything works in advance by compiling and running one of the sample exams.
 
 \subsection{Note for retakers}
-The retakers of the old INFDEV02-8 (Development 8) and functional programming (INFADP01-D) must repeat the whole exam because now the system records just a single grade. This means that if you passed partially the theory or practice of either Development 8 or INFADP01-D you need to repeat the whole exam.
+The retakers of the old INFDEV02-8 (Development 8) and functional programming (INFFPR01-D/21-D) must repeat the whole exam because now the system records just a single grade. This means that if you passed partially the theory or practice of either Development 8 or INFFPR01-D/21-D you need to repeat the whole exam.
