Update course manual

--- a/Course manual/Course manual advanced programming.tex
+++ b/Course manual/Course manual advanced programming.tex
@@ -68,9 +68,9 @@ breaklines=true}
 \newcommand{\organisatie}{\uppercase{Hogeschool Rotterdam / CMI}}
 \newcommand{\modulenaam}{Functional Programming}
 \newcommand{\modulecode}{\uppercase{INFADP01-D/INFADP21-D}}
-\newcommand{\studiejaar}{\uppercase{2021-2022}}
+\newcommand{\studiejaar}{\uppercase{2022-2023}}
 \newcommand{\stdPunten}{4}
-\renewcommand{\author}{Francesco Di Giacomo, Mohamed Abbadi}
+\renewcommand{\author}{Francesco Di Giacomo, Giuseppe Maggiore}
 
 \definecolor{lichtGrijs}{RGB}{169,169,169}
 
@@ -136,7 +136,7 @@ breaklines=true}
 \newpage
 %\bibliographystyle{plain}
 %\bibliography{references}
-\glossarystyle{altlist}
+
 \printglossaries
 
 \input{Bijlage1}
