--- a/Course manual/Toetsing.tex
+++ b/Course manual/Toetsing.tex
@@ -1,5 +1,5 @@
 \section{Assessment}
-The course is tested with two exams: a written exam and a practical exam. The theory part happens on paper while you can use your laptop in the practical one. Both parts result in a single grade. This means that partial grades on each part are not kept. 
+The course is tested with an exam consisting of two parts: a theory part and a practical part. The theory part happens on paper while you can use your laptop in the practical one. Both parts result in a single grade. This means that partial grades on each part are not kept. 
 
 \subsection{Theoretical examination \modulecode}
 The general shape of an exam for \texttt{\modulecode} is made up of a short series of highly structured open questions.
